--- a/index.html
+++ b/index.html
@@ -1,32 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-table, th, td {
-  border: 1px solid black;
-}
-</style>
+	<title>go</title>
 </head>
 <body>
-
-<h1>The tr element</h1>
-
-<p>The tr element defines a row in a table:</p>
-
-<table>
-  <tr>
-    <th>Month</th>
-    <th>Savings</th>
-  </tr>
-  <tr>
-    <td>January</td>
-    <td>$100</td>
-  </tr>
-  <tr>
-    <td>February</td>
-    <td>$80</td>
-  </tr>
-</table>
-
+	<h1>first page</h1>
 </body>
 </html>
